--- a/style.css
+++ b/style.css
@@ -1,344 +1,72 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     text-decoration: none;
 }
-:root {
-    --accent-color: #fff;
-    --gradient-color: #FBFBFB;
-}
-body{
+
+body {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-        width: 100vw;
-    height: 100vh;
     background-image: linear-gradient(-45deg, #ffffff 0%, #e0e0e0 100%);
+    font-family: 'Lato', sans-serif;
 }
 
-.sidebar{
+.sidebar {
     position: fixed;
     width: 240px;
-    left: -240px;
-    height: 100%;
+    height: 100vh;
     background-color: #fff;
-    transition: all .5s ease;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    padding-top: 20px;
 }
-.sidebar header{
+
+.sidebar header {
     font-size: 28px;
     color: #353535;
-    line-height: 70px;
     text-align: center;
-    background-color: #fff;
-    user-select: none;
-    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
-.sidebar a{
+
+.sidebar a {
     display: block;
-    height: 65px;
-    width: 100%;
+    padding: 15px 30px;
     color: #353535;
-    line-height: 65px;
-    padding-left: 30px;
-    box-sizing: border-box;
-    border-left: 5px solid transparent;
-    font-family: 'Lato', sans-serif;
-    transition: all .5s ease;
-}
-a.active,a:hover{
-    border-left: 5px solid var(--accent-color);
-    color: #fff;
-    background: linear-gradient(to left, var(--accent-color), var(--gradient-color));
-}
-.sidebar a i{
-    font-size: 23px;
-    margin-right: 16px;
-}
-.sidebar a span{
-    letter-spacing: 1px;
     text-transform: uppercase;
-}
-#check{
-    display: none;
-}
-label #btn,label #cancel{
-    position: absolute;
-    left: 5px;
-    cursor: pointer;
-    color: #d8d8d8;
-    border-radius: 5px;
-    margin: 15px 30px;
-    font-size: 29px;
-    background-color: #727272;
-    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-        inset -7px -7px 10px 0px rgba(0,0,0,.1),
-        3.5px 3.5px 20px 0px rgba(0,0,0,.1),
-        2px 2px 5px 0px rgba(0,0,0,.1);
-    height: 45px;
-    width: 45px;
-    text-align: center;
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
-    line-height: 45px;
-    transition: all .5s ease;
-}
-label #cancel{
-    opacity: 0;
-    visibility: hidden;
-}
-#check:checked ~ .sidebar{
-    left: 0;
-}
-#check:checked ~ label #btn{
-    margin-left: 245px;
-    opacity: 0;
-    visibility: hidden;
-}
-#check:checked ~ label #cancel{
-    margin-left: 245px;
-    opacity: 1;
-    visibility: visible;
-}
-@media(max-width : 860px){
-.sidebar{
-        height: auto;
-        width: 70px;
-        left: 0;
-        margin: 100px 0;
-}
-header,#btn,#cancel{
-        display: none;
-}
-span{
-        position: absolute;
-        margin-left: 23px;
-        opacity: 0;
-        visibility: hidden;
-}
-.sidebar a{
-    height: 60px;
-}
-.sidebar a i{
-    margin-left: -10px;
-}
-a:hover {
-    width: 200px;
-    background: inherit;
-}
-.sidebar a:hover span{
-    opacity: 1;
-    visibility: visible;
-}
+    transition: 0.3s;
 }
 
-.sidebar > a.active,.sidebar > a:hover:nth-child(even) {
-    --accent-color: #4a4a4a;
-    --gradient-color: #c4c4c4;
-}
-.sidebar a.active,.sidebar > a:hover:nth-child(odd) {
-    --accent-color: #4a4a4a;
-    --gradient-color: #c4c4c4;
+.sidebar a:hover, .sidebar a.active {
+    background-color: #4a4a4a;
+    color: white;
 }
 
-
-.frame {
-    width: 50%;
-    height: 30%;
-    margin: auto;
-    text-align: center;
+.main-content {
+    margin-left: 240px;
+    padding: 20px;
+    width: calc(100% - 240px);
 }
 
-h2 {
-    position: relative;
-    text-align: center;
-    color: #353535;
-    font-size: 60px;
-    font-family: 'Lato', sans-serif;
-    margin: 0;
-    color: #000000;
-}
-
-p {
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    text-align: center;
-    font-size: 30px;
-    color: #000000;
-    margin: 0;
-}
-
-/* CONTACTO */
-.login-box {
-    width: 400px;
-    padding: 40px;
-    background: rgba(0,0,0,.9);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    border-radius: 10px;
-}
-
-.login-box p:first-child {
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: bold;
-    letter-spacing: 1px;
-}
-
-.login-box .user-box {
-    position: relative;
-}
-
-.login-box .user-box input {
+.wave-container {
     width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
-}
-
-.login-box .user-box label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    pointer-events: none;
-    transition: .5s;
-}
-
-.login-box .user-box input:focus ~ label,
-.login-box .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #fff;
-    font-size: 12px;
-}
-
-.login-box form a {
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    font-weight: bold;
-    color: #fff;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
+    height: 150px;
     overflow: hidden;
-    transition: .5s;
-    margin-top: 40px;
-    letter-spacing: 3px
+    position: relative;
 }
 
-.login-box a:hover {
-    background: #fff;
-    color: #272727;
-    border-radius: 5px;
-}
-
-.login-box a span {
+.wave-container svg {
     position: absolute;
-    display: block;
-}
-
-.login-box a span:nth-child(1) {
     top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #fff);
-    animation: btn-anim1 1.5s linear infinite;
-}
-
-@keyframes btn-anim1 {
-    0% {
-        left: -100%;
-    }
-
-    50%,100% {
-        left: 100%;
-    }
-}
-
-.login-box a span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #fff);
-    animation: btn-anim2 1.5s linear infinite;
-    animation-delay: .375s
-}
-
-@keyframes btn-anim2 {
-    0% {
-        top: -100%;
-    }
-
-    50%,100% {
-        top: 100%;
-    }
-}
-
-.login-box a span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #fff);
-    animation: btn-anim3 1.5s linear infinite;
-    animation-delay: .75s
-}
-
-@keyframes btn-anim3 {
-    0% {
-        right: -100%;
-    }
-
-    50%,100% {
-        right: 100%;
-    }
-}
-
-.login-box a span:nth-child(4) {
-    bottom: -100%;
     left: 0;
-    width: 2px;
     height: 100%;
-    background: linear-gradient(360deg, transparent, #fff);
-    animation: btn-anim4 1.5s linear infinite;
-    animation-delay: 1.125s
+    width: 100%;
 }
 
-@keyframes btn-anim4 {
-    0% {
-        bottom: -100%;
-    }
-
-    50%,100% {
-        bottom: 100%;
-    }
+.content {
+    padding: 40px;
+    background-color: #f5f5f5;
 }
 
-.login-box p:last-child {
-    color: #aaa;
-    font-size: 14px;
-}
-
-.login-box a.a2 {
-    color: #fff;
-    text-decoration: none;
-}
-
-.login-box a.a2:hover {
-    background: transparent;
-    color: #aaa;
-    border-radius: 5px;
+.space {
+    padding: 10px;
 }
